--- a/Tutorial 3/Tutorial 3.vcxproj
+++ b/Tutorial 3/Tutorial 3.vcxproj
@@ -18,10 +18,33 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BasicActors.h" />
+    <ClInclude Include="CompoundActors.h" />
+    <ClInclude Include="Exception.h" />
+    <ClInclude Include="Extras\Camera.h" />
+    <ClInclude Include="Extras\GLFontData.h" />
+    <ClInclude Include="Extras\GLFontRenderer.h" />
+    <ClInclude Include="Extras\HUD.h" />
+    <ClInclude Include="Extras\Renderer.h" />
+    <ClInclude Include="Extras\UserData.h" />
+    <ClInclude Include="MyPhysicsEngine.h" />
+    <ClInclude Include="PhysicsEngine.h" />
+    <ClInclude Include="VisualDebugger.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Extras\Camera.cpp" />
+    <ClCompile Include="Extras\GLFontRenderer.cpp" />
+    <ClCompile Include="Extras\Renderer.cpp" />
+    <ClCompile Include="PhysicsEngine.cpp" />
+    <ClCompile Include="VisualDebugger.cpp" />
+    <ClCompile Include="Tutorial 3.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{0AE6BC90-F422-4D6B-9CF2-D86984407E94}</ProjectGuid>
-    <RootNamespace>Project</RootNamespace>
+    <ProjectGuid>{EB5900CB-DC72-42B3-B1FD-445ECC8EFB93}</ProjectGuid>
+    <RootNamespace>Workshop1</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>Tutorial 3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -79,9 +102,10 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(PHYSX_SDK)\include;.\Graphics\include\win32</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(PHYSX_SDK)\lib\vc14win64;.\Graphics\lib\win64\glut</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(PHYSX_SDK)\lib\vc14win32;.\Graphics\lib\win32\glut</AdditionalLibraryDirectories>
       <AdditionalDependencies>PhysX3CommonDEBUG_$(PlatformTarget).lib;PhysX3ExtensionsDEBUG.lib;PhysXVisualDebuggerSDKDEBUG.lib;PhysX3DEBUG_$(PlatformTarget).lib;PhysX3CookingDEBUG_$(PlatformTarget).lib;glut32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -105,10 +129,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(PHYSX_SDK)\include;.\Graphics\include\win32</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <PreprocessorDefinitions>NDEBUG;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>$(PHYSX_SDK)\lib\vc14win32;.\Graphics\lib\win32\glut</AdditionalLibraryDirectories>
+      <AdditionalDependencies>PhysX3Common_$(PlatformTarget).lib;PhysX3Extensions.lib;PhysXVisualDebuggerSDK.lib;PhysX3_$(PlatformTarget).lib;PhysX3Cooking_$(PlatformTarget).lib;glut32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -119,6 +148,8 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(PHYSX_SDK)\include;.\Graphics\include\win32</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <PreprocessorDefinitions>NDEBUG;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -127,34 +158,6 @@
       <AdditionalDependencies>PhysX3Common_$(PlatformTarget).lib;PhysX3Extensions.lib;PhysXVisualDebuggerSDK.lib;PhysX3_$(PlatformTarget).lib;PhysX3Cooking_$(PlatformTarget).lib;glut32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="Actors\Actors.h" />
-    <ClInclude Include="Actors\Complex.h" />
-    <ClInclude Include="Actors\Joints.h" />
-    <ClInclude Include="Actors\Primitive.h" />
-    <ClInclude Include="Exception.h" />
-    <ClInclude Include="Extras\Camera.h" />
-    <ClInclude Include="Extras\GLFontData.h" />
-    <ClInclude Include="Extras\GLFontRenderer.h" />
-    <ClInclude Include="Extras\Helper.h" />
-    <ClInclude Include="Extras\HUD.h" />
-    <ClInclude Include="Extras\MaterialLibrary.h" />
-    <ClInclude Include="Extras\Renderer.h" />
-    <ClInclude Include="Extras\UserData.h" />
-    <ClInclude Include="MyPhysicsEngine.h" />
-    <ClInclude Include="PhysicsEngine.h" />
-    <ClInclude Include="VisualDebugger.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Extras\Camera.cpp" />
-    <ClCompile Include="Extras\GLFontRenderer.cpp" />
-    <ClCompile Include="Extras\Helper.cpp" />
-    <ClCompile Include="Extras\MaterialLibrary.cpp" />
-    <ClCompile Include="Extras\Renderer.cpp" />
-    <ClCompile Include="PhysicsEngine.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="VisualDebugger.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
